--- a/sass/style.scss
+++ b/sass/style.scss
@@ -62,6 +62,7 @@ iframe {
     --border: 2px solid red;
     --greenBnt: #16A600;
     --greenBntHover: #1EC700;
+    --linkColor: #735800;
     --greyBg: rgba(196, 196, 196, 0.25);
     --bgGradient: linear-gradient(14.76deg, rgba(21, 21, 21, 0.8) 18.61%, rgba(21, 21, 21, 0.3) 37.63%, rgba(21, 21, 21, 0) 90.23%);
     font-family: 'Oswald', sans-serif;
@@ -717,4 +718,91 @@ footer {
             margin-left: v(24);
         }
     }
+}
+
+// Contarct
+
+.contact {
+    display: flex;
+    flex-direction: column;
+}
+
+.contactTitle {
+    font-size: v(40);
+    line-height: v(64);
+    text-transform: uppercase;
+    margin: v(24) v(48);
+}
+
+.contactBlockText{
+    font-size: v(16);
+    line-height: v(24);
+    text-align: center;
+    text-transform: uppercase;
+    width: v(360);
+    margin: auto;
+}
+
+.contactHeader {
+    font-weight: 500;
+    margin-bottom: v(24);
+}
+
+.contactBody {
+    margin: 0 auto;
+    font-size: v(16);
+    line-height: v(24);
+    text-align: center;
+    a{
+        color: var(--linkColor);
+        opacity: 0.8;
+        &:hover{
+            opacity: 1;
+        }
+    }
+    margin-bottom: v(24);
+}
+
+.contactFooter{
+    margin-bottom: v(24);
+    a{
+        color:var(--linkColor);
+        opacity: 0.8;
+        &:hover{
+            opacity: 1;
+        }
+    }
+}
+.contactMap{
+    iframe{
+        min-width: 100%;
+    }
+}
+
+// Servis
+
+.servis{
+    margin: v(48) auto;
+    display: flex;
+}
+
+.servisBlock{
+    display: flex;
+    margin: 0 auto;
+}
+
+.servisBlockText{
+    width: v(552);
+}
+.servisTitle{
+    font-size: v(48);
+    line-height: v(64);
+    font-weight: bold;
+}
+.servisTextDescr{
+    font-weight: normal;
+    font-size: v(16);
+    line-height: v(24);
+    margin: v(24) 0;
+    border-radius: 4px;
 }
