--- a/css/style.css
+++ b/css/style.css
@@ -198,6 +198,12 @@ nav {
   opacity: 1;
 }
 
+@media (max-width: 800px) {
+  .logo {
+    margin: 4rem 6.5rem;
+  }
+}
+
 .headerSocial {
   -ms-grid-row: 1;
   -ms-grid-column: 2;
@@ -216,6 +222,24 @@ nav {
   list-style: none;
 }
 
+@media (max-width: 800px) {
+  .headerSocial {
+    margin: 6rem 0;
+  }
+}
+
+.burgerMenuInMobVesion {
+  display: none;
+}
+
+@media (max-width: 800px) {
+  .burgerMenuInMobVesion {
+    display: block;
+    color: #fff;
+    cursor: pointer;
+  }
+}
+
 .socialBlock {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -223,6 +247,12 @@ nav {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media (max-width: 800px) {
+  .socialBlock {
+    display: none;
+  }
 }
 
 .socialBlock ul {
@@ -308,6 +338,12 @@ nav {
   margin-right: 0;
 }
 
+@media (max-width: 800px) {
+  .headerNav {
+    display: none;
+  }
+}
+
 .headerSocialBlock {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -329,6 +365,12 @@ nav {
   display: flex;
 }
 
+@media (max-width: 800px) {
+  .mainBlock {
+    height: 100vh;
+  }
+}
+
 .mainBlockProduct .imgBlock {
   -webkit-transform: skewX(23deg) translateX(15.5%);
           transform: skewX(23deg) translateX(15.5%);
@@ -337,6 +379,17 @@ nav {
 .mainBlockProduct .imgBlock img {
   -webkit-transform: skewX(-23deg) translateX(-14%);
           transform: skewX(-23deg) translateX(-14%);
+}
+
+@media (max-width: 800px) {
+  .mainBlockProduct .imgBlock {
+    -webkit-transform: skewX(0) translateX(0);
+            transform: skewX(0) translateX(0);
+  }
+  .mainBlockProduct .imgBlock img {
+    -webkit-transform: skewX(0) translateX(0);
+            transform: skewX(0) translateX(0);
+  }
 }
 
 .textMainBlock {
@@ -355,6 +408,18 @@ nav {
   text-align: left;
   -webkit-transform: translateX(18rem);
           transform: translateX(18rem);
+}
+
+@media (max-width: 800px) {
+  .textMainBlock {
+    position: absolute;
+    z-index: 6;
+    left: 50%;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%);
+    top: 50%;
+    margin: 0;
+  }
 }
 
 .textMainBlock .button {
@@ -390,8 +455,16 @@ nav {
   overflow: hidden;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  z-index: 10;
+  z-index: 6;
   position: relative;
+}
+
+@media (max-width: 800px) {
+  .imgBlock {
+    -webkit-transform: skewX(0) translateX(0);
+            transform: skewX(0) translateX(0);
+    z-index: 5;
+  }
 }
 
 .imgBlock img {
@@ -400,6 +473,13 @@ nav {
   min-width: 100%;
   min-height: 100%;
   z-index: 5;
+}
+
+@media (max-width: 800px) {
+  .imgBlock img {
+    -webkit-transform: skewX(0) translateX(0);
+            transform: skewX(0) translateX(0);
+  }
 }
 
 .angle {
@@ -422,6 +502,15 @@ nav {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media (max-width: 800px) {
+  .blockVariantImg {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .blockVariantImg {
@@ -498,12 +587,27 @@ nav {
   margin: 0 auto;
 }
 
+@media (max-width: 800px) {
+  .monstSubTitle {
+    max-width: 182rem;
+  }
+}
+
 .mostrImgBlock {
   margin: 0 auto;
   padding-bottom: 12rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+@media (max-width: 800px) {
+  .mostrImgBlock {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .mostrBlockHover {
@@ -517,10 +621,6 @@ nav {
   display: none;
 }
 
-.mostrBlockHover:nth-child(2) {
-  left: 19.5rem;
-}
-
 .mostrBlockHoverTitle {
   margin: 0 auto;
   color: #fff;
@@ -528,6 +628,7 @@ nav {
   font-size: 7rem;
   line-height: 10rem;
   text-align: center;
+  padding-bottom: 6rem;
 }
 
 .hoverContent {
@@ -542,6 +643,10 @@ nav {
   margin: 42rem auto 0;
 }
 
+.hoverContent a {
+  opacity: 1;
+}
+
 .hoverContent .button {
   margin: 0 auto;
 }
@@ -554,15 +659,96 @@ nav {
 .mostrImg:nth-child(1) {
   -webkit-transform: translateX(12%);
           transform: translateX(12%);
+  -webkit-animation: animationLeft 500ms;
+          animation: animationLeft 500ms;
+}
+
+.mostrImg:nth-child(1) .hoverContent {
+  margin: 42rem auto 0 27rem;
+}
+
+@media (max-width: 800px) {
+  .mostrImg:nth-child(1) {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  .mostrImg:nth-child(1) img {
+    content: url("../img/maxresdefault.jpg");
+  }
 }
 
 .mostrImg:nth-child(2) {
   -webkit-transform: translateX(-12%);
           transform: translateX(-12%);
+  overflow: hidden;
+  -webkit-animation: animationRight 500ms;
+          animation: animationRight 500ms;
+}
+
+.mostrImg:nth-child(2) .mostrBlockHover {
+  -webkit-transform: skewX(-21deg);
+          transform: skewX(-21deg);
+  left: 19.5rem;
+}
+
+.mostrImg:nth-child(2) .hoverContent {
+  -webkit-transform: skewX(21deg);
+          transform: skewX(21deg);
+}
+
+@media (max-width: 800px) {
+  .mostrImg:nth-child(2) {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
 }
 
 .mostrImg:hover .mostrBlockHover {
   display: block;
+}
+
+@-webkit-keyframes animateLeft {
+  0% {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+  }
+  100% {
+    -webkit-transform: translateX(12%);
+            transform: translateX(12%);
+  }
+}
+
+@keyframes animateLeft {
+  0% {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+  }
+  100% {
+    -webkit-transform: translateX(12%);
+            transform: translateX(12%);
+  }
+}
+
+@-webkit-keyframes animateRight {
+  0% {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+  }
+  100% {
+    -webkit-transform: translateX(-12%);
+            transform: translateX(-12%);
+  }
+}
+
+@keyframes animateRight {
+  0% {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+  }
+  100% {
+    -webkit-transform: translateX(-12%);
+            transform: translateX(-12%);
+  }
 }
 
 .social {
@@ -596,6 +782,14 @@ nav {
       grid-template-areas: "yt inst face";
 }
 
+@media (max-width: 800px) {
+  .socialMainBlock {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+        grid-template-areas: "yt" "inst" "face";
+  }
+}
+
 .socialMainBlock:nth-child(odd) {
   -ms-grid-columns: (78rem)[2] 126rem;
       grid-template-columns: repeat(2, 78rem) 126rem;
@@ -603,10 +797,23 @@ nav {
   margin: 0 auto 6rem;
 }
 
+@media (max-width: 800px) {
+  .socialMainBlock:nth-child(odd) {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+        grid-template-areas: "yt" "inst" "face";
+  }
+}
+
 .youTube {
   -ms-grid-row: 1;
   -ms-grid-column: 3;
   grid-area: yt;
+}
+
+.youTube iframe {
+  max-width: 140rem;
+  max-height: 75rem;
 }
 
 .instagramm {
@@ -1109,6 +1316,8 @@ footer {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   z-index: 6;
+  position: fixed;
+  right: 0;
 }
 
 .modalPopupTitle,
