--- a/sass/style.scss
+++ b/sass/style.scss
@@ -176,6 +176,9 @@ nav {
     overflow: hidden;
     min-width: 100%;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    @media (max-width: 800px){
+        grid-template-columns: v(116) 1fr;
+    }
 }
 
 .logo {
@@ -614,7 +617,7 @@ nav {
     grid-template-rows: v(300);
     grid-template-areas: "yt inst face";
     @media (max-width: 800px){
-        grid-template-columns: 1fr;
+        grid-template-columns: min(100%);
         grid-template-areas: "yt" "inst" "face";
     }
 
@@ -628,24 +631,37 @@ nav {
         }
     }
 }
+.youTube,
+.instagramm,
+.theFacebook{
+    @media (max-width: 800px){
+        margin: auto;
+        min-width: v(560);
+    }
+}
 
 .youTube {
     grid-area: yt;
     iframe{
-        max-width: v(560);
-        max-height: v(300);
+        min-width: v(560);
+        min-height: v(300);
     }
+    
 }
 
 .instagramm {
     grid-area: inst;
+    img{
+        min-width: 100%;
+        min-height: 100%;
+    }
 }
 
 .theFacebook {
     grid-area: face;
     // this options if only no widget fb
     text-align: center;
-    padding: 0 v(24);
+    padding: v(24) v(24);
     margin: auto;
     font-weight: normal;
     font-size: v(16);
@@ -681,6 +697,13 @@ footer {
     font-size: v(16);
     line-height: v(24);
     margin: v(22) v(48) v(24);
+    @media (max-width: 800px){
+        flex-direction: column;
+        align-items: center;
+        p:nth-child(2){
+            margin: v(24) 0;
+        }
+    }
 }
 
 // Product
