refactoring block with mulcher and change pravki

--- a/css/style.css
+++ b/css/style.css
@@ -606,6 +606,7 @@ nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  overflow: hidden;
 }
 
 @media (max-width: 800px) {
@@ -647,7 +648,7 @@ nav {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: 42rem auto 0;
+  margin: 27rem auto 27rem;
 }
 
 .hoverContent a {
@@ -660,18 +661,38 @@ nav {
 
 .mostrImg {
   position: relative;
-  z-index: 1;
+  z-index: 2;
+  height: 102rem;
 }
 
 .mostrImg:nth-child(1) {
-  -webkit-transform: translateX(12%);
-          transform: translateX(12%);
+  -webkit-transform: skewX(-20deg);
+          transform: skewX(-20deg);
   -webkit-animation: animationLeft 500ms;
           animation: animationLeft 500ms;
+  z-index: 2;
+  width: 50%;
+  overflow: hidden;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.mostrImg:nth-child(1) img {
+  z-index: 1;
+  -webkit-transform: skewX(20deg) translateX(28%);
+          transform: skewX(20deg) translateX(28%);
+  min-width: 100%;
+  min-height: 100%;
+  overflow: hidden;
 }
 
 .mostrImg:nth-child(1) .hoverContent {
-  margin: 42rem auto 0 27rem;
+  margin-left: 15%;
+}
+
+.mostrImg:nth-child(1) .mostrBlockHover {
+  -webkit-transform: skewX(20deg) translateX(45.5rem);
+          transform: skewX(20deg) translateX(45.5rem);
 }
 
 @media (max-width: 800px) {
@@ -685,22 +706,30 @@ nav {
 }
 
 .mostrImg:nth-child(2) {
-  -webkit-transform: translateX(-12%);
-          transform: translateX(-12%);
+  -webkit-transform: skewX(-20deg);
+          transform: skewX(-20deg);
+  -webkit-animation: animationLeft 500ms;
+          animation: animationLeft 500ms;
+  z-index: 2;
+  width: 50%;
   overflow: hidden;
-  -webkit-animation: animationRight 500ms;
-          animation: animationRight 500ms;
+}
+
+.mostrImg:nth-child(2) img {
+  z-index: 1;
+  -webkit-transform: skewX(20deg) translateX(-28%);
+          transform: skewX(20deg) translateX(-28%);
+  min-width: 100%;
+  min-height: 100%;
 }
 
 .mostrImg:nth-child(2) .mostrBlockHover {
-  -webkit-transform: skewX(-21deg);
-          transform: skewX(-21deg);
-  left: 19.5rem;
+  -webkit-transform: skewX(20deg) translateX(-46rem);
+          transform: skewX(20deg) translateX(-46rem);
 }
 
 .mostrImg:nth-child(2) .hoverContent {
-  -webkit-transform: skewX(21deg);
-          transform: skewX(21deg);
+  margin-right: 15%;
 }
 
 @media (max-width: 800px) {
@@ -712,6 +741,8 @@ nav {
 
 .mostrImg:hover .mostrBlockHover {
   display: block;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
 }
 
 @-webkit-keyframes animateLeft {
@@ -787,6 +818,7 @@ nav {
   -ms-grid-rows: 75rem;
       grid-template-rows: 75rem;
       grid-template-areas: "yt inst face";
+  overflow: hidden;
 }
 
 @media (max-width: 800px) {
